@@ -84,7 +84,7 @@
 - (void)awakeFromNib;
 
 - (void)applicationDidFinishLaunching:(NSNotification *)aNotif;
-- (BOOL)applicationShouldTerminate:(id)sender;
+- (NSApplicationTerminateReply)applicationShouldTerminate:(id)sender;
 - (void)applicationWillTerminate:(NSNotification *)aNotif;
 - (BOOL)application:(NSApplication *)application openFile:(NSString *)fileName;
 
