@@ -143,9 +143,9 @@
     return;
 }
 
-- (BOOL)applicationShouldTerminate:(id)sender
+- (NSApplicationTerminateReply)applicationShouldTerminate:(id)sender
 {
-  return YES;
+  return NSTerminateNow;
 }
 
 - (void)applicationWillTerminate:(NSNotification *)aNotif
